fix(help): mobile overflow

--- a/app/src/components/Docs.css
+++ b/app/src/components/Docs.css
@@ -3,8 +3,6 @@
   max-width: 800px;
   margin: 0 auto;
   line-height: 1.5;
-  display: grid;
-  gap: calc(2 * var(--spacer-px));
 }
 
 .flowchartFunHelp main > * + * {
